--- a/jday/css/layout.css
+++ b/jday/css/layout.css
@@ -568,9 +568,9 @@ footer {
 	background: #0f0f0f;
    padding-top: 24px;
    padding-bottom: 24px;
-   color: #303030;
+   color: #f0f0f0;
 }
-footer a, footer a:visited { color: #525252; }
+footer a, footer a:visited { color: #f2f252; }
 footer a:hover, footer a:focus { color: #fff; }
 
 /* copyright */
