--- a/jday/css/media-queries.css
+++ b/jday/css/media-queries.css
@@ -15,10 +15,10 @@
 	------------------------------------------------------------------ */
 	#intro {	min-height: 828px; }
 
-	/* Header 
+	/* Header
 	------------------------------------------------------------------ */
-	header #logo {	
-		top: 66px;	
+	header #logo {
+		top: 66px;
 		width: 100px;
 		margin-left: -50px;
 	}
@@ -26,16 +26,16 @@
    /* main
    ------------------------------------------------------------------ */
    #main { margin-top: 90px; }
-  	#main h1 { 
-  		font: 38px/1.2em 'montserrat-bold', sans-serif; 
+  	#main h1 {
+  		font: 38px/1.2em 'montserrat-bold', sans-serif;
   		padding: 0 15%;
   	}
 	#main p { font: 16px/30px 'montserrat-regular', sans-serif; }
 
 	/* counter */
-	#main #counter { 
+	#main #counter {
 		width: 70%;
-		margin: 12px auto 0; 
+		margin: 12px auto 0;
 	}
 	#main #counter span { font: 60px/1em 'merriweather-bold', serif;	}
 
@@ -54,13 +54,13 @@
 
    /* main
    ------------------------------------------------------------------ */
-   #main h1 { 
-  		font: 35px/1.2em 'montserrat-bold', sans-serif; 
+   #main h1 {
+  		font: 35px/1.2em 'montserrat-bold', sans-serif;
   		padding: 0 8%;
   	}
-  	#main p { 
+  	#main p {
   		font: 16px/30px 'montserrat-regular', sans-serif;
-  		padding: 0 10%; 
+  		padding: 0 10%;
   	}
 
   	/* counter */
@@ -68,8 +68,8 @@
 	#main #counter span { font: 58px/1em 'merriweather-bold', serif;	}
 
 	/* mailchimp form */
-	#main #mc_embed_signup { 
-		width: 65%; 
+	#main #mc_embed_signup {
+		width: 65%;
 		margin-top: 36px;
 	}
 
@@ -78,47 +78,47 @@
    #about { padding-top: 84px}
    #about .section-header .icon-wrap { font-size: 55px; }
 	#about .section-header h1,
-	#call-to-action h2 {	font: 28px/36px 'montserrat-bold', sans-serif; }
+	#call2action h2 {	font: 28px/36px 'montserrat-bold', sans-serif; }
 
-	#call-to-action .section-ads { padding-top: 42px; }
-	#call-to-action p { padding: 0 10%; }
+	#call2action .section-ads { padding-top: 42px; }
+	#call2action p { padding: 0 10%; }
 
 	/* location section
-	------------------------------------------------------------------ */   
+	------------------------------------------------------------------ */
 	#location .contacts .row .columns { width: 50%; }
-	#location .contacts .row .end { clear: both; }	
+	#location .contacts .row .end { clear: both; }
 
 }
 
-/* mobile 
+/* mobile
 ---------------------------------------------------------------------- */
 @media only screen and (max-width: 767px) {
 
 	/* intro styles
 	------------------------------------------------------------------ */
-	header #logo {	
-		top: 30px;	
+	header #logo {
+		top: 30px;
 		width: 90px;
-		margin-left: -45px;			
+		margin-left: -45px;
 	}
 
 	/* primary navigation
 	--------------------------------------------------------------------- */
 	#nav-wrap > a { right: 0; }
-	#nav-wrap ul#nav { 
+	#nav-wrap ul#nav {
 		background: #111;
-		right: 0; 
+		right: 0;
 	}
 
    /* main
    ------------------------------------------------------------------ */
    #main { margin-top: 48px; }
-  	#main h1 { 
-  		font: 30px/1.2em 'montserrat-bold', sans-serif; 
-  		text-align: center;  		
+  	#main h1 {
+  		font: 30px/1.2em 'montserrat-bold', sans-serif;
+  		text-align: center;
   	}
-  	#main p {	
-		font: 14px/24px 'montserrat-regular', sans-serif;		
+  	#main p {
+		font: 14px/24px 'montserrat-regular', sans-serif;
 		margin-bottom: 15px;
 		text-align: center;
 	}
@@ -129,17 +129,17 @@
 
   	/* counter */
 	#main #counter {
-		width: 100%;		
+		width: 100%;
 		margin: 12px 0 30px;
 	}
-	#main #counter span { 
-		font: 46px/1em 'merriweather-bold', serif;	
+	#main #counter span {
+		font: 46px/1em 'merriweather-bold', serif;
 		padding: 9px 0 15px;
 	}
 	#main #counter span em {
 		font: 9px/18px 'montserrat-regular', sans-serif;
 		text-transform: uppercase;
-		letter-spacing: 1px;		
+		letter-spacing: 1px;
 		margin-top: 6px;
 	}
 
@@ -177,30 +177,30 @@
    -------------------------------------------------------------------- */
    #about {	padding-top: 72px; }
    #about .icon-wrap {
-   	text-align: center; 
+   	text-align: center;
    	margin-bottom: 30px;
    }
    #about .header { text-align: center; }
-   #about h1 {	font: 26px/36px 'montserrat-bold', sans-serif; }   
+   #about h1 {	font: 26px/36px 'montserrat-bold', sans-serif; }
 
    /* Call To Action Section
    ----------------------------------------------------------------- */
-   #call-to-action h2 {	font: 26px/36px 'montserrat-bold', sans-serif; }
-   #call-to-action .action,
-   #call-to-action .action a  { 
+   #call2action h2 {	font: 26px/36px 'montserrat-bold', sans-serif; }
+   #call2action .action,
+   #call2action .action a  {
 		width: 100%;
-		position: static;	
-		text-align: center;	
+		position: static;
+		text-align: center;
 	}
 
 	/* location section
-	------------------------------------------------------------------ */ 
+	------------------------------------------------------------------ */
 	#location .contacts { padding-top: 54px; }
-	#location .contacts .row .columns { 
+	#location .contacts .row .columns {
 		text-align: center;
-		width: 100%; 
+		width: 100%;
 		float: none;
-	}	
+	}
 
    /* footer
    ------------------------------------------------------------------------ */
@@ -209,8 +209,8 @@
    /* copyright */
 	footer .copyright { text-align: center; }
    footer .copyright li:before { content: none; }
-   footer .copyright li { 
-   	margin: 0; 
+   footer .copyright li {
+   	margin: 0;
    	display: block;
    	line-height: 27px;
    }
@@ -224,28 +224,28 @@
 	/* intro styles
 	------------------------------------------------------------------ */
 	#intro {	min-height: 780px; }
-   
+
    /* main
    ------------------------------------------------------------------ */
-   #main h1 { 
-  		font: 28px/1.2em 'montserrat-bold', sans-serif; 
+   #main h1 {
+  		font: 28px/1.2em 'montserrat-bold', sans-serif;
 		padding: 0 5px;
   	}
-    
+
   	/* counter */
 	#main #counter {
-		width: 100%;		
+		width: 100%;
 		margin: 0 0 24px;
 	}
-	#main #counter span { 
-		font: 40px/1em 'merriweather-bold', serif;	
+	#main #counter span {
+		font: 40px/1em 'merriweather-bold', serif;
 		padding: 9px 0 15px;
 		border: none;
 	}
 	#main #counter span em {
 		font: 9px/18px 'montserrat-regular', sans-serif;
 		margin-top: 6px;
-	} 
+	}
 
 	/* mailchimp form */
 	#main #mc_embed_signup { width: 80%; }
@@ -255,7 +255,7 @@
    ------------------------------------------------------------------ */
    #about .section-header .icon-wrap { font-size: 50px; }
 	#about .section-header h1,
-	#call-to-action h2 {
+	#call2action h2 {
 		font: 24px/30px 'montserrat-bold', sans-serif;
 		padding: 0;
 	}
@@ -263,17 +263,17 @@
 		font: 16px/33px 'merriweather-light', sans-serif;
 		padding: 0;
 	}
-	#call-to-action .action a.button { width: 100%; }  
+	#call2action .action a.button { width: 100%; }
 
    /* footer
    ------------------------------------------------------------------------ */
 
    /* social links */
    footer .social-links { font-size: 20px; }
-   footer .social-links li { margin-left: 14px; }  
+   footer .social-links li { margin-left: 14px; }
 
    /* Go To Top Button */
-	#go-top { right: 15px; } 
+	#go-top { right: 15px; }
 
 }
 
@@ -293,9 +293,9 @@
 
   	/* counter
    ------------------------------------------------------------- */
-	#main #counter span { 
-		font: 35px/1em 'merriweather-bold', serif;	
-		padding: 9px 0 15px;		
+	#main #counter span {
+		font: 35px/1em 'merriweather-bold', serif;
+		padding: 9px 0 15px;
 	}
 	#main #counter span em {
 		font: 9px/18px 'montserrat-regular', sans-serif;
@@ -310,12 +310,3 @@
    #main .social li { margin: 0 6px; }
 
 }
-
-
-
-
-
-
-
-
-
